# deskd

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: TARGET_ARCHITECTURE.md
src/: acp.rs  agent.rs  bus.rs  config.rs  context.rs  graph.rs  inbox.rs  lib.rs  main.rs  mcp.rs  message.rs  schedule.rs  statemachine.rs  task.rs  tasklog.rs  unified_inbox.rs  worker.rs  workflow.rs
src/adapters/: telegram.rs
src/domain/: message.rs  mod.rs  statemachine.rs  task.rs
src/ports/: bus.rs  executor.rs  mod.rs
tests/: schedule_to_worker.rs  workflow_transitions.rs
